WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209948
[MultiColumn] Infinite loop in RenderBlockFlow::pushToNextPageWithMinimumLogicalHeight
https://bugs.webkit.org/show_bug.cgi?id=209948
Summary
[MultiColumn] Infinite loop in RenderBlockFlow::pushToNextPageWithMinimumLogi...
alan
Reported
2020-04-02 20:03:03 PDT
<
rdar://problem/59331899
>
Attachments
Patch
(4.95 KB, patch)
2020-04-02 20:27 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-04-02 20:27:33 PDT
Created
attachment 395341
[details]
Patch
EWS
Comment 2
2020-04-03 06:56:39 PDT
Committed
r259455
: <
https://trac.webkit.org/changeset/259455
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395341
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug