[MultiColumn] Infinite loop in RenderBlockFlow::pushToNextPageWithMinimumLogicalHeight https://bugs.webkit.org/show_bug.cgi?id=209948 <rdar://problem/59331899>

Reviewed by Antti Koivisto.

Source/WebCore:

pushToNextPageWithMinimumLogicalHeight is supposed to find the next page/column with enough space for the content.
However we keep finding the same column because it is not balanced properly yet (while in layout, they have the initial height of LayoutUnit::max).

Test: fast/multicol/infinite-loop-with-unbalanced-column.html

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::pushToNextPageWithMinimumLogicalHeight const):

LayoutTests:

* fast/multicol/infinite-loop-with-unbalanced-column-expected.txt: Added.
* fast/multicol/infinite-loop-with-unbalanced-column.html: Added.


Canonical link: https://commits.webkit.org/222876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259455 268f45cc-cd09-0410-ab3c-d52691b4dbfc